--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^5.0.1",
     "express": "^4.17.1",
+    "pg": "^8.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.1"
